--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
 		"run": "webpack serve --port 3000 --mode development --open --hot"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
+		"@fontsource/inter": "^5.0.15",
+		"@mui/icons-material": "^5.14.18",
+		"@mui/joy": "^5.0.0-beta.15",
+		"@mui/material": "^5.14.18",
 		"localforage": "^1.10.0",
 		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
