--- a/package.json
+++ b/package.json
@@ -13,21 +13,16 @@
 		"match-sorter": "^6.3.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.19.0",
-		"sort-by": "^1.2.0"
+		"sort-by": "^0.0.2"
 	},
 	"devDependencies": {
-		"@types/copy-webpack-plugin": "^10.1.0",
-		"@types/node": "^20.9.1",
-		"@types/react": "^18.2.37",
-		"@types/react-dom": "^18.2.15",
-		"@types/react-router": "^5.1.20",
+		"@babel/core": "^7.23.5",
+		"@babel/preset-env": "^7.23.5",
+		"@babel/preset-react": "^7.23.3",
+		"babel-loader": "^9.1.3",
 		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.8.1",
 		"style-loader": "^3.3.3",
-		"ts-loader": "^9.5.1",
-		"ts-node": "^10.9.1",
-		"typescript": "^5.2.2",
 		"webpack": "^5.89.0",
 		"webpack-cli": "^5.1.4",
 		"webpack-dev-server": "^4.15.1"
